--- a/index.css
+++ b/index.css
@@ -117,3 +117,12 @@
 .footer-item{
     text-align: center;
 }
+
+.footer-item:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+@media(max-width: 500px){
+    
+}
